objects/Apttus__APTS_Agreement__c.object
<CustomObject>
    <fields>
        <fullName>Governing_Law__c</fullName>
        <description>Identifies the governing law the agreement is subject to.</description>
        <inlineHelpText>Identifies the governing law the agreement is subject to.</inlineHelpText>
        <label>Governing Law</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Lousiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
                <value>
                    <fullName>New Jersey</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Helix_Data_Panel__c</fullName>
        <description>Helix Data Panel IP rights Helix grants to partner.</description>
        <inlineHelpText>Helix Data Panel IP rights Helix grants to partner.</inlineHelpText>
        <label>Helix Data Panel</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Helix_End_User_Data__c</fullName>
        <description>Helix End User Data IP rights Helix grants to partner.</description>
        <inlineHelpText>Helix End User Data IP rights Helix grants to partner.</inlineHelpText>
        <label>Helix End User Data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Helix_IP__c</fullName>
        <description>Helix IP license rights Helix grant to partner.</description>
        <inlineHelpText>Helix IP license rights Helix grant to partner.</inlineHelpText>
        <label>Helix IP</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Helix_Marketplace_Exclusivity__c</fullName>
        <description>Reflects whether or not the products developed by the partner are exclusive to the Helix Marketplace.</description>
        <inlineHelpText>Is the Product (or Products) going to be exclusive on the Helix Marketplace?</inlineHelpText>
        <label>Helix Marketplace Exclusivity?</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inactive_Days2__c</fullName>
        <formula>IF( TODAY() - DATEVALUE(LastModifiedDate ) &gt;= 90 , &apos;90 Days&apos;,
IF( TODAY() - DATEVALUE(LastModifiedDate ) &gt;= 60 , &apos;60 Days&apos;,
IF( TODAY() - DATEVALUE(LastModifiedDate ) &gt;= 30 ,&apos;30 Days&apos;,&apos;None&apos;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Inactive Days</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Requirements__c</fullName>
        <description>What insurance requirements does Helix or the third party have?</description>
        <inlineHelpText>What insurance requirements does Helix or the third party have?</inlineHelpText>
        <label>Insurance Requirements</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>License_to_Helix__c</fullName>
        <description>Company IP rights partner grants to Helix.</description>
        <inlineHelpText>Company IP rights partner grants to Helix.</inlineHelpText>
        <label>License to Helix</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Commitments__c</fullName>
        <description>Include dollar commitments and any metrics, commitments, or thresholds associated with marketing dollar commitments made.</description>
        <inlineHelpText>Include dollar commitments and any metrics, commitments, or thresholds associated with marketing dollar commitments made.</inlineHelpText>
        <label>Marketing Commitments ($)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Indemnification__c</fullName>
        <description>Record any non-standard changes to indemnification.</description>
        <inlineHelpText>Record any non-standard changes to indemnification.</inlineHelpText>
        <label>Non Standard Indemnification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Limitation_of_Liability__c</fullName>
        <description>Record any non-standard changes to limitation of liability.</description>
        <inlineHelpText>Record any non-standard changes to limitation of liability.</inlineHelpText>
        <label>Non Standard Limitation of Liability</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_Standard_Terms__c</fullName>
        <label>Non Standard Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Pricing_Terms__c</fullName>
        <label>Other Pricing Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pro_Services_Waiver_Period__c</fullName>
        <description>Period of time Helix is waiving Professional Services Fees.</description>
        <inlineHelpText>Period of time Helix is waiving Professional Services Fees.</inlineHelpText>
        <label>Pro Services Waiver Period</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Processing_Fee_Dollar__c</fullName>
        <description>Dollar amount for corresponding Processing Fee (%), as applicable.</description>
        <inlineHelpText>Dollar amount for corresponding Processing Fee (%), as applicable.</inlineHelpText>
        <label>Processing Fee ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Processing_Fee_Percent__c</fullName>
        <description>One-time processing fee that Helix may charge first time customers for sequencing. Corresponds to Processing Fee ($), as applicable.</description>
        <inlineHelpText>One-time processing fee that Helix may charge first time customers for sequencing. Corresponds to Processing Fee ($), as applicable.</inlineHelpText>
        <label>Processing Fee (%)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Processing_Fee__c</fullName>
        <description>One-time processing fee that Helix may charge first time customers for sequencing.</description>
        <inlineHelpText>One-time processing fee that Helix may charge first time customers for sequencing.</inlineHelpText>
        <label>Processing Fee</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Development__c</fullName>
        <description>Product development description for Preliminary Collaboration Terms.</description>
        <inlineHelpText>Product development description for Preliminary Collaboration Terms.</inlineHelpText>
        <label>Product Development</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Professional_Services_Fee__c</fullName>
        <description>Fee for Helix professional services.</description>
        <inlineHelpText>Fee for Helix professional services.</inlineHelpText>
        <label>Professional Services Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Publication_Rights__c</fullName>
        <description>Identifies the publication rights the Recipient has with respect to the Results.</description>
        <inlineHelpText>Identifies the publication rights the Recipient has with respect to the Results.</inlineHelpText>
        <label>Publication Rights</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Genomic_Product_Rev_Share_Detail__c</fullName>
        <label>Related Genomic Product Rev Share Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Genomic_Product_Rev_Share__c</fullName>
        <description>Rev share percentage for related genomic products developed by partner that rely on Helix Panel Data or End User Results of a partner app.</description>
        <inlineHelpText>Rev share percentage for related genomic products developed by partner that rely on Helix Panel Data or End User Results of a partner app.</inlineHelpText>
        <label>Related Genomic Product Rev Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Related_Product_Rev_Share_Detail__c</fullName>
        <label>Related Product Rev Share Detail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Product_Rev_Share__c</fullName>
        <description>Rev share percentage for related products developed by partner that doesn&apos;t rely on Helix Panel Data or End User Results of a partner app.</description>
        <inlineHelpText>Rev share percentage for related products developed by partner that doesn&apos;t rely on Helix Panel Data or End User Results of a partner app.</inlineHelpText>
        <label>Related Product Rev Share</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Requestor_Unlisted__c</fullName>
        <label>Requestor (Unlisted)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Committments__c</fullName>
        <description>Identify any sales commitments a party makes under the Marketplace Alliance Agreement.</description>
        <inlineHelpText>Identify any sales commitments a party makes under the Marketplace Alliance Agreement.</inlineHelpText>
        <label>Sales Committments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Settlement_of_Amounts_Helix__c</fullName>
        <description>Identifies the time period to settle amounts for Marketplace sales of partner&apos;s app(s).</description>
        <inlineHelpText>Identifies the time period to settle amounts for Marketplace sales of partner&apos;s app(s).</inlineHelpText>
        <label>Settlement of Amounts (Helix)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Settlement_of_Amounts_Partner__c</fullName>
        <description>Identifies the time period to settle amounts for out-of-Marketplace sales of partner&apos;s app(s).</description>
        <inlineHelpText>Identifies the time period to settle amounts for out-of-Marketplace sales of partner&apos;s app(s).</inlineHelpText>
        <label>Settlement of Amounts (Partner)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Termination_Obligations__c</fullName>
        <description>Record what the termination obligations are for either/both parties under the agreement.</description>
        <inlineHelpText>Record what the termination obligations are for either/both parties under the agreement.</inlineHelpText>
        <label>Termination Obligations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Incorporation__c</fullName>
        <description>Identifies the type of entity the other party is formed as.</description>
        <inlineHelpText>Identifies the type of entity the other party is formed as.</inlineHelpText>
        <label>Type of Incorporation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>C Corporation</fullName>
                </value>
                <value>
                    <fullName>Doing Business As (DBA)</fullName>
                </value>
                <value>
                    <fullName>Limited Company</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Company (LLC)</fullName>
                </value>
                <value>
                    <fullName>Limited Liability Partnership (LLP)</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>Non Profit</fullName>
                </value>
                <value>
                    <fullName>S Corporation</fullName>
                </value>
                <value>
                    <fullName>Sole Proprietorship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_Transfer__c</fullName>
        <description>Identifies if a transfer of material is either inbound or outbound.</description>
        <inlineHelpText>Identifies if a transfer of material is either inbound or outbound.</inlineHelpText>
        <label>Type of Transfer</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inbound</fullName>
                </value>
                <value>
                    <fullName>Outbound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Agreement</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus__FF_Agreement_Number__c</columns>
        <columns>Apttus__Account__c</columns>
        <columns>Apttus__Status_Category__c</columns>
        <columns>Apttus__Status__c</columns>
        <columns>Apttus__Contract_End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Agreement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agreements</pluralLabel>
    <recordTypes>
        <fullName>Consulting_Agreement</fullName>
        <active>true</active>
        <description>Consulting Agreement</description>
        <label>Consulting Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketplace_Alliance_Agreement</fullName>
        <active>true</active>
        <description>Marketplace agreement to add partner apps to the Helix Marketplace.</description>
        <label>Marketplace Alliance Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Material_Transfer_Agreement</fullName>
        <active>true</active>
        <description>Agreement for the transfer of material to Helix pursuant to the purpose(s) set forth in the agreement.</description>
        <label>Material Transfer Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>NDA</fullName>
        <active>true</active>
        <description>NDA</description>
        <label>NDA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Preliminary_Collaboration_Terms</fullName>
        <active>true</active>
        <description>Record Type to capture Preliminary Collaboration Terms</description>
        <label>Preliminary Collaboration Terms</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>APTS_Fixed_Fee_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( APTS_Fees__c , &apos;Fixed Fee Basis&apos;)  &amp;&amp;  (ISNULL( APTS_Fixed_Fee__c)  || APTS_Fixed_Fee__c = 0)</errorConditionFormula>
        <errorDisplayField>APTS_Fixed_Fee__c</errorDisplayField>
        <errorMessage>Fixed Fee is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APTS_Non_Standard_Text_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>Apttus__Non_Standard_Legal_Language__c &amp;&amp;  ISBLANK(Apttus__Special_Terms__c)</errorConditionFormula>
        <errorDisplayField>Apttus__Special_Terms__c</errorDisplayField>
        <errorMessage>Non Standard Terms is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>APTS_Time_and_Materials_Fee_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( APTS_Fees__c , &apos;Time &amp; Material Basis&apos;)  &amp;&amp;  (ISNULL(APTS_Time_Material_Fee__c)  || APTS_Time_Material_Fee__c = 0)</errorConditionFormula>
        <errorDisplayField>APTS_Time_Material_Fee__c</errorDisplayField>
        <errorMessage>Time &amp; Material Fee is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus__End_Date_Check</fullName>
        <active>true</active>
        <description>Check that either perpetual is checked or end date is filled in when agreement goes into effect</description>
        <errorConditionFormula>AND(
ISPICKVAL(Apttus__Status_Category__c,&quot;In Effect&quot;),
AND(ISNULL(Apttus__Contract_End_Date__c),NOT(Apttus__Perpetual__c)),
OR(ISNULL(Apttus__Term_Months__c),Apttus__Term_Months__c&lt;=0)
)</errorConditionFormula>
        <errorDisplayField>Apttus__Contract_End_Date__c</errorDisplayField>
        <errorMessage>Please enter the Agreement End Date or mark the Agreement as Perpetual prior to executing the agreement.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus__Term_Validation</fullName>
        <active>true</active>
        <description>Validate that Term is entered correctly</description>
        <errorConditionFormula>AND( ( Apttus__Perpetual__c ),  (  Apttus__Term_Months__c  ) &gt; 0 )</errorConditionFormula>
        <errorDisplayField>Apttus__Term_Months__c</errorDisplayField>
        <errorMessage>Cannot enter both Perpetual and Term.  Please enter only one of the values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus__Term_Validation_2</fullName>
        <active>true</active>
        <description>Validate that Term is entered correctly</description>
        <errorConditionFormula>AND( (Apttus__Perpetual__c ),  NOT(ISNULL(  Apttus__Contract_End_Date__c )) )</errorConditionFormula>
        <errorDisplayField>Apttus__Contract_End_Date__c</errorDisplayField>
        <errorMessage>Cannot enter both Perpetual and End Date.  Please enter only one of the values</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Apttus__Term_Validation_3</fullName>
        <active>false</active>
        <description>Validate that Term is entered correctly (DEPRECATED)</description>
        <errorConditionFormula>AND( (  Apttus__Term_Months__c ) &gt; 0,  NOT(ISNULL(  Apttus__Contract_End_Date__c )) )</errorConditionFormula>
        <errorDisplayField>Apttus__Contract_End_Date__c</errorDisplayField>
        <errorMessage>Cannot enter both Term and End Date.  Please enter only one of the values</errorMessage>
    </validationRules>
</CustomObject>